...
    ? tiles.map((tile) => [tile])
    : tiles.flatMap((tile, index) =>
        index % 2 === 0 ? [tiles.slice(index, index + 2)] : [],
      );

  return (
    <View style={styles.board} testID="style-board">
      {rows.map((row) => (
        <View key={row.map(({ id }) => id).join()} style={styles.row}>
          {row.map((tile) => (
            <BoardTile key={tile.id} tile={tile} />
          ))}
          {!ax && row.length === 1 ? <View style={styles.tile} /> : null}
...
