appId: com.zaimimran.almari
# UC-F11-07
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "header-profile"
- assertVisible:
    id: "profile"
- scrollUntilVisible:
    element:
      id: "app-version"
- assertVisible:
    id: "app-privacy"
- assertVisible:
    id: "app-version"
