appId: com.zaimimran.almari
# UC-F11-12
# seed: sample with name
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "header-profile"
- assertVisible:
    id: "profile"
- tapOn:
    id: "profile-name"
- eraseText: 20
- tapOn: "Save"
- tapOn:
    id: "profile-name"
- inputText: "Sara A"
- tapOn: "Save"
- tapOn: "Back"
- assertVisible: "Good morning, Sara A|Good afternoon, Sara A|Good evening, Sara A|Hi, Sara A"
