appId: com.zaimimran.almari
---
- tapOn:
    id: "home-create"
- extendedWaitUntil:
    visible:
      id: "create-submit"
    timeout: 10000
- tapOn:
    id: "create-submit"
- extendedWaitUntil:
    visible:
      id: "today-outfit"
    timeout: 60000
